# Spectra

./: PIPELINE.md  PLANS.md  README.md  SpectraClass.py  collate.py  count.py  ctest.py  environment.yml  plot.py  pyproject.toml  query-plot.r  spectra-plot-lim.r  spectra-plot-old.r  spectra-plot.r  spectra.py  spectral.py  tasks.py  transform.py
includes/: paletteMatrix_base.csv
libraries/: cfunctions.hpp
scripts/: analyze.py  cluster.py  collate.py  contigs.py  count.py  plot.py  query.py  transform.py
scripts/parallel/: count.py  transform.py
scripts/utils/: kmerComp.py  kmerRank.py  mass-query-plot.r  mass-query.py  mass-query2.py  n-counter.py  paletteBuilder.py  pdfReport.py  preparePipeline.py  query-plot.r  trfWindows.py
